--- a/producer/Laptop_Asus.html
+++ b/producer/Laptop_Asus.html
@@ -290,7 +290,7 @@
 									</div>
 									<div class="product-body">
 										<p class="product-category">Asus</p>
-										<h3 class="product-name"><a href="#">MÁY XÁCH TAY/ LAPTOP ASUS UX510UX-CN204 (I5-7200U) (XÁM)</a></h3>
+										<h3 class="product-name"><a href="../detail/asus/Asus UX510UX-CN204.html">MÁY XÁCH TAY/ LAPTOP ASUS UX510UX-CN204 (I5-7200U) (XÁM)</a></h3>
 										<h4 class="product-price">15.490.000 ₫<del class="product-old-price">17.190.000 ₫</del></h4>
 									</div>
 								</a>
@@ -304,7 +304,7 @@
 									</div>
 									<div class="product-body">
 										<p class="product-category">Asus</p>
-										<h3 class="product-name"><a href="#">Máy xách tay/ Laptop Asus GL503VM-GZ254T (I7-7700HQ) (Đen)</a></h3>
+										<h3 class="product-name"><a href="../detail/asus/Asus GL503VM-GZ254T.html">Máy xách tay/ Laptop Asus GL503VM-GZ254T (I7-7700HQ) (Đen)</a></h3>
 										<h4 class="product-price">39.990.000 ₫<del class="product-old-price"></del></h4>
 									</div>
 								</a>
@@ -316,7 +316,7 @@
 								</div>
 								<div class="product-body">
 									<p class="product-category">Asus</p>
-									<h3 class="product-name"><a href="#">Máy xách tay/ Laptop Asus GL503VM-GZ219T (I7-7700HQ) (Đen)</a></h3>
+									<h3 class="product-name"><a href="../detail/asus/Asus GL503VM-GZ219T.html">Máy xách tay/ Laptop Asus GL503VM-GZ219T (I7-7700HQ) (Đen)</a></h3>
 									<h4 class="product-price">32.490.000 ₫<del class="product-old-price"></del></h4>
 								</div>
 							</div>
@@ -369,7 +369,7 @@
 										</div>
 										<div class="product-body">
 											<p class="product-category">Asus</p>
-											<h3 class="product-name"><a href="#">Máy xách tay/ Laptop Asus GL503VM-GZ219T (I7-7700HQ) (Đen)</a></h3>
+											<h3 class="product-name"><a href="../detail/asus/Asus GL503VM-GZ219T.html">Máy xách tay/ Laptop Asus GL503VM-GZ219T (I7-7700HQ) (Đen)</a></h3>
 											<h4 class="product-price">32.490.000 ₫<del class="product-old-price"></del></h4>
 											<div class="product-rating">
 												<i class="fa fa-star"></i>
@@ -384,7 +384,9 @@
 											</div>
 										</div>
 										<div class="add-to-cart">
-											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											<a href="../user/cart.html">
+												<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											</a>
 										</div>
 									</div>
 								</a>
@@ -405,7 +407,7 @@
 										</div>
 										<div class="product-body">
 											<p class="product-category">Asus</p>
-											<h3 class="product-name"><a href="#">
+											<h3 class="product-name"><a href="../detail/asus/Asus X541UA-GO1384.html">
 											Máy xách tay/ Laptop Asus X541UA-GO1384 (I5-7200U) (Đen)</a></h3>
 											<h4 class="product-price">10.390.000 ₫<del class="product-old-price">12.390.000 ₫</del></h4>
 											<div class="product-rating">
@@ -421,7 +423,9 @@
 											</div>
 										</div>
 										<div class="add-to-cart">
-											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											<a href="../user/cart.html">
+												<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											</a>
 										</div>
 									</div>
 								</a>
@@ -442,7 +446,7 @@
 										</div>
 										<div class="product-body">
 											<p class="product-category">Asus</p>
-											<h3 class="product-name"><a href="#">
+											<h3 class="product-name"><a href="../detail/asus/Asus TP410UA-EC250T.html">
 											Máy xách tay/ Laptop Asus TP410UA-EC250T (I3-7100U) (Xám)</a></h3>
 											<h4 class="product-price">13.990.000 ₫<del class="product-old-price"></del></h4>
 											<div class="product-rating">
@@ -453,7 +457,9 @@
 											</div>
 										</div>
 										<div class="add-to-cart">
-											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											<a href="../user/cart.html">
+												<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											</a>
 										</div>
 									</div>
 								</a>
@@ -476,7 +482,7 @@
 										</div>
 										<div class="product-body">
 											<p class="product-category">Asus</p>
-											<h3 class="product-name"><a href="#">
+											<h3 class="product-name"><a href="../detail/asus/Asus UX510UX-CN204.html">
 											Máy xách tay/ Laptop Asus UX510UX-CN204 (I5-7200U) (Xám)</a></h3>
 											<h4 class="product-price">15.490.000 ₫<del class="product-old-price">17.190.000 ₫</del></h4>
 											<div class="product-rating">
@@ -492,7 +498,9 @@
 											</div>
 										</div>
 										<div class="add-to-cart">
-											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											<a href="../user/cart.html">
+												<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											</a>
 										</div>
 									</div>
 								</a>
@@ -511,7 +519,7 @@
 									</div>
 									<div class="product-body">
 										<p class="product-category">Asus</p>
-										<h3 class="product-name"><a href="#">
+										<h3 class="product-name"><a href="../detail/asus/Asus A540UP-DM094T.html">
 										Máy xách tay/ Laptop Asus A540UP-DM094T (I3-7100U) (Bạc)</a></h3>
 										<h4 class="product-price">11.900.000 ₫<del class="product-old-price"></del></h4>
 										<div class="product-rating">
@@ -522,7 +530,9 @@
 										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+										<a href="../user/cart.html">
+											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+										</a>
 									</div>
 								</div>
 							</div>
@@ -539,7 +549,7 @@
 									</div>
 									<div class="product-body">
 										<p class="product-category">Asus</p>
-										<h3 class="product-name"><a href="#">
+										<h3 class="product-name"><a href="../detail/asus/Asus X510UQ-BR570.html">
 										Máy xách tay/ Laptop Asus X510UQ-BR570 (I5-7200U) (Xám)</a></h3>
 										<h4 class="product-price">13.990.000 ₫<del class="product-old-price">14.290.000 ₫</del></h4>
 										<div class="product-rating">
@@ -550,7 +560,9 @@
 										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+										<a href="../user/cart.html">
+											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+										</a>
 									</div>
 								</div>
 							</div>
@@ -567,7 +579,7 @@
 										</div>
 										<div class="product-body">
 											<p class="product-category">ASUS</p>
-											<h3 class="product-name"><a href="#">Máy xách tay/ Laptop Asus UX430UN-GV097T (I7-8550U) (Xanh)</a></h3>
+											<h3 class="product-name"><a href="../detail/asus/Asus UX430UN-GV097T.html"> Máy xách tay/ Laptop Asus UX430UN-GV097T (I7-8550U) (Xanh)</a></h3>
 											<h4 class="product-price">26.990.000 ₫<del class="product-old-price"></del></h4>
 											<div class="product-rating">
 												<i class="fa fa-star"></i>
@@ -582,7 +594,9 @@
 											</div>
 										</div>
 										<div class="add-to-cart">
-											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											<a href="../user/cart.html">
+												<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											</a>
 										</div>
 									</div>
 								</a>
@@ -598,7 +612,7 @@
 										</div>
 										<div class="product-body">
 											<p class="product-category">Asus</p>
-											<h3 class="product-name"><a href="#">Máy xách tay/ Laptop Asus X405UA-BV330T (I3-7100U) (Xám đen)</a></h3>
+											<h3 class="product-name"><a href="../detail/asus/Asus X405UA-BV330T.html">Máy xách tay/ Laptop Asus X405UA-BV330T (I3-7100U) (Xám đen)</a></h3>
 											<h4 class="product-price">11.790.000 ₫<del class="product-old-price"></del></h4>
 											<div class="product-rating">
 												<i class="fa fa-star"></i>
@@ -613,7 +627,9 @@
 											</div>
 										</div>
 										<div class="add-to-cart">
-											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											<a href="../user/cart.html">
+												<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											</a>
 										</div>
 									</div>
 								</a>
@@ -634,7 +650,7 @@
 										</div>
 										<div class="product-body">
 											<p class="product-category">Asus</p>
-											<h3 class="product-name"><a href="#">Máy xách tay/ Laptop Asus GL503VM-GZ254T (I7-7700HQ) (Đen)</a></h3>
+											<h3 class="product-name"><a href="../detail/asus/Asus GL503VM-GZ254T.html">Máy xách tay/ Laptop Asus GL503VM-GZ254T (I7-7700HQ) (Đen)</a></h3>
 											<h4 class="product-price">39.990.000 ₫<del class="product-old-price"></del></h4>
 											<div class="product-rating">
 												<i class="fa fa-star"></i>
@@ -649,7 +665,9 @@
 											</div>
 										</div>
 										<div class="add-to-cart">
-											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											<a href="../user/cart.html">
+												<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											</a>
 										</div>
 									</div>
 								</a>
@@ -761,7 +779,6 @@
 						<div class="col-md-12 text-center">
 							<span class="copyright">
 								Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made by NQT
-								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 							</span>
 						</div>
 					</div>
