--- a/producer/Laptop_Dell.html
+++ b/producer/Laptop_Dell.html
@@ -289,7 +289,7 @@
 									</div>
 									<div class="product-body">
 										<p class="product-category">Dell</p>
-										<h3 class="product-name"><a href="#">Máy xách tay/ Laptop Dell Vostro 3568-VTI35037 (Đen)</a></h3>
+										<h3 class="product-name"><a href="../detail/dell/Dell Vostro 3568.html">Máy xách tay/ Laptop Dell Vostro 3568-VTI35037 (Đen)</a></h3>
 										<h4 class="product-price">11.090.000 ₫<del class="product-old-price"></del></h4>
 									</div>
 								</a>
@@ -303,7 +303,7 @@
 									</div>
 									<div class="product-body">
 										<p class="product-category">MacBook</p>
-										<h3 class="product-name"><a href="#">Máy xách tay/ Laptop Dell Vostro 5468-VTI35008 (Vàng đồng)</a></h3>
+										<h3 class="product-name"><a href="../detail/dell/Dell Vostro 5468-VTI35008.html">Máy xách tay/ Laptop Dell Vostro 5468-VTI35008 (Vàng đồng)</a></h3>
 										<h4 class="product-price">16.990.000 ₫<del class="product-old-price">18.490.000 ₫</del></h4>
 									</div>
 								</a>
@@ -315,7 +315,7 @@
 								</div>
 								<div class="product-body">
 									<p class="product-category">Dell</p>
-									<h3 class="product-name"><a href="#">MÁY XÁCH TAY/ LAPTOP DELL INSPIRON 14 7460-N4I5259W (ĐỒNG)</a></h3>
+									<h3 class="product-name"><a href="../detail/dell/Dell Inspiron 14 7460.html">MÁY XÁCH TAY/ LAPTOP DELL INSPIRON 14 7460-N4I5259W (ĐỒNG)</a></h3>
 									<h4 class="product-price">16.490.000 ₫<del class="product-old-price">19.990.000 ₫</del></h4>
 								</div>
 							</div>
@@ -368,7 +368,7 @@
 										</div>
 										<div class="product-body">
 											<p class="product-category">Dell</p>
-											<h3 class="product-name"><a href="#">Máy xách tay/ Laptop Dell Vostro 3568-VTI35037 (Đen)</a></h3>
+											<h3 class="product-name"><a href="../detail/dell/Dell Vostro 3568.html">Máy xách tay/ Laptop Dell Vostro 3568-VTI35037 (Đen)</a></h3>
 											<h4 class="product-price">11.090.000 ₫<del class="product-old-price"></del></h4>
 											<div class="product-rating">
 												<i class="fa fa-star"></i>
@@ -383,7 +383,9 @@
 											</div>
 										</div>
 										<div class="add-to-cart">
-											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											<a href="../user/cart.html">
+												<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											</a>
 										</div>
 									</div>
 									
@@ -404,7 +406,7 @@
 										</div>
 										<div class="product-body">
 											<p class="product-category">DELL</p>
-											<h3 class="product-name"><a href="#">Máy xách tay/ Laptop Dell Vostro 5468-VTI35008 (Vàng đồng)</a></h3>
+											<h3 class="product-name"><a href="../detail/dell/Dell Vostro 5468-VTI35008.html">Máy xách tay/ Laptop Dell Vostro 5468-VTI35008 (Vàng đồng)</a></h3>
 											<h4 class="product-price">16.990.000 ₫<del class="product-old-price">18.490.000 ₫</del></h4>
 											<div class="product-rating">
 												<i class="fa fa-star"></i>
@@ -419,7 +421,9 @@
 											</div>
 										</div>
 										<div class="add-to-cart">
-											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											<a href="../user/cart.html">
+												<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											</a>
 										</div>
 									</div>
 								</a>
@@ -441,7 +445,7 @@
 										</div>
 										<div class="product-body">
 											<p class="product-category">Dell</p>
-											<h3 class="product-name"><a href="#">
+											<h3 class="product-name"><a href="../detail/dell/Dell XPS13 9360-99H103.html">
 											Máy xách tay/ Laptop Dell XPS13 9360-99H103 (I7-7560U-SSD512G) (Bạc)</a></h3>
 											<h4 class="product-price">46.090.000 ₫<del class="product-old-price">49.590.000 ₫</del></h4>
 											<div class="product-rating">
@@ -452,7 +456,9 @@
 											</div>
 										</div>
 										<div class="add-to-cart">
-											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											<a href="../user/cart.html">
+												<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											</a>
 										</div>
 									</div>
 								</a>
@@ -474,7 +480,7 @@
 									</div>
 									<div class="product-body">
 										<p class="product-category">DELL</p>
-										<h3 class="product-name"><a href="#">Máy xách tay/ Laptop Dell Inspiron 14 7460-N4I5259W (Đồng)</a></h3>
+										<h3 class="product-name"><a href="../detail/dell/Dell Inspiron 14 7460.html">Máy xách tay/ Laptop Dell Inspiron 14 7460-N4I5259W (Đồng)</a></h3>
 										<h4 class="product-price">16.490.000 ₫<del class="product-old-price">19.990.000 ₫</del></h4>
 										<div class="product-rating">
 											<i class="fa fa-star"></i>
@@ -489,7 +495,9 @@
 										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+										<a href="../user/cart.html">
+											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+										</a>
 									</div>
 								</div>
 								
@@ -507,7 +515,7 @@
 									</div>
 									<div class="product-body">
 										<p class="product-category">DELL</p>
-										<h3 class="product-name"><a href="#">Máy xách tay/ Laptop Dell Vostro 3468 (F3468-70088614) (Đen)</a></h3>
+										<h3 class="product-name"><a href="../detail/dell/Dell Vostro 3468 (F3468-70088614).html">Máy xách tay/ Laptop Dell Vostro 3468 (F3468-70088614) (Đen)</a></h3>
 										<h4 class="product-price">12.790.000 ₫<del class="product-old-price"></del></h4>
 										<div class="product-rating">
 										</div>
@@ -517,7 +525,9 @@
 										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+										<a href="../user/cart.html">
+											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+										</a>
 									</div>
 								</div>
 							</div>
@@ -532,7 +542,7 @@
 										</div>
 										<div class="product-body">
 											<p class="product-category">DELL</p>
-											<h3 class="product-name"><a href="#">Máy xách tay/ Laptop Dell Inspiron 14 3467-M20NR21 (I3-7100U) (Đen)</a></h3>
+											<h3 class="product-name"><a href="../detail/dell/Dell Inspiron 14 3467-M20NR21.html">Máy xách tay/ Laptop Dell Inspiron 14 3467-M20NR21 (I3-7100U) (Đen)</a></h3>
 											<h4 class="product-price">11.490.000 ₫<del class="product-old-price"></del></h4>
 											<div class="product-rating">
 											</div>
@@ -542,7 +552,9 @@
 											</div>
 										</div>
 										<div class="add-to-cart">
-											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											<a href="../user/cart.html">
+												<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											</a>
 										</div>
 									</div>
 								</a>
@@ -561,7 +573,7 @@
 										</div>
 										<div class="product-body">
 											<p class="product-category">Dell</p>
-											<h3 class="product-name"><a href="#">
+											<h3 class="product-name"><a href="../detail/dell/Dell XPS13 9360-99H103.html">
 											Máy xách tay/ Laptop Dell XPS13 9365-K7DWW2 (I7-7Y75-SSD512G) (Bạc)</a></h3>
 											<h4 class="product-price">54.490.000 ₫<del class="product-old-price"></del></h4>
 											<div class="product-rating">
@@ -577,7 +589,9 @@
 											</div>
 										</div>
 										<div class="add-to-cart">
-											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											<a href="../user/cart.html">
+												<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											</a>
 										</div>
 									</div>
 								</a>
@@ -596,7 +610,7 @@
 										</div>
 										<div class="product-body">
 											<p class="product-category">Dell</p>
-											<h3 class="product-name"><a href="#">Máy xách tay/ Laptop Dell 5437-D8MMY2 (Bạc)</a></h3>
+											<h3 class="product-name"><a href="../detail/dell/Dell 5437-D8MMY2.html">Máy xách tay/ Laptop Dell 5437-D8MMY2 (Bạc)</a></h3>
 											<h4 class="product-price">15.900.000 ₫<del class="product-old-price"></del></h4>
 											<div class="product-rating">
 												<i class="fa fa-star"></i>
@@ -611,7 +625,9 @@
 											</div>
 										</div>
 										<div class="add-to-cart">
-											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											<a href="../user/cart.html">
+												<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											</a>
 										</div>
 									</div>
 								</a>
@@ -632,7 +648,7 @@
 										</div>
 										<div class="product-body">
 											<p class="product-category">Dell</p>
-											<h3 class="product-name"><a href="#">
+											<h3 class="product-name"><a href="../detail/dell/Dell Vostro 5468-VTI35008.html">
 											Máy xách tay/ Laptop Dell Vostro 5468-VTI35008 (Vàng đồng)</a></h3>
 											<h4 class="product-price">12.790.000 ₫<del class="product-old-price"></del></h4>
 											<div class="product-rating">
@@ -648,7 +664,9 @@
 											</div>
 										</div>
 										<div class="add-to-cart">
-											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											<a href="../user/cart.html">
+												<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											</a>
 										</div>
 									</div>
 								</a>
