--- a/producer/Laptop_MacBook.html
+++ b/producer/Laptop_MacBook.html
@@ -284,7 +284,7 @@
 								</div>
 								<div class="product-body">
 									<p class="product-category">Apple</p>
-									<h3 class="product-name"><a href="#">Máy xách tay/ Laptop MacBook 13.3" MPXU2LL/A (Bạc)
+									<h3 class="product-name"><a href="../detail/apple/mac_MPXU2LL.html">Máy xách tay/ Laptop MacBook 13.3" MPXU2LL/A (Bạc)
 									</a></h3>
 									<h4 class="product-price">39.250.000 ₫<del class="product-old-price"></del></h4>
 								</div>
@@ -299,7 +299,7 @@
 								</div>
 								<div class="product-body">
 									<p class="product-category">Apple</p>
-									<h3 class="product-name"><a href="#">Máy xách tay/ Laptop MacBook 13.3" MPXU2LL/A (Bạc)</a></h3>
+									<h3 class="product-name"><a href="../detail/apple/mac_MPXU2LL.html">Máy xách tay/ Laptop MacBook 13.3" MPXU2LL/A (Bạc)</a></h3>
 									<h4 class="product-price">39.250.000 ₫<del class="product-old-price"></del></h4>
 								</div>
 							</a>
@@ -311,7 +311,7 @@
 							</div>
 							<div class="product-body">
 								<p class="product-category">Apple</p>
-								<h3 class="product-name"><a href="#">Máy xách tay/ Laptop MacBook Air MQD32HN/A</a></h3>
+								<h3 class="product-name"><a href="../detail/apple/mac_MQD32HN.html">Máy xách tay/ Laptop MacBook Air MQD32HN/A</a></h3>
 								<h4 class="product-price">22.490.000 ₫<del class="product-old-price"></del></h4>
 							</div>
 						</div>
@@ -364,7 +364,7 @@
 									</div>
 									<div class="product-body">
 										<p class="product-category">Apple</p>
-										<h3 class="product-name"><a href="#">Máy xách tay/ Laptop MacBook 12" MNYM2SA/A (Vàng hồng)</a></h3>
+										<h3 class="product-name"><a href="../detail/apple/mac_MNYM2SA.html">Máy xách tay/ Laptop MacBook 12" MNYM2SA/A (Vàng hồng)</a></h3>
 										<h4 class="product-price">33.450.000 ₫<del class="product-old-price"></del></h4>
 										<div class="product-rating">
 											<i class="fa fa-star"></i>
@@ -379,7 +379,9 @@
 										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+										<a href="../user/cart.html">
+											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+										</a>
 									</div>
 								</div>
 							</a>
@@ -399,7 +401,7 @@
 									</div>
 									<div class="product-body">
 										<p class="product-category">MacBook</p>
-										<h3 class="product-name"><a href="#">Máy xách tay/ Laptop MacBook 13.3" MPXU2LL/A (Bạc)
+										<h3 class="product-name"><a href="../detail/apple/mac_MPXU2LL.html">Máy xách tay/ Laptop MacBook 13.3" MPXU2LL/A (Bạc)
 										</a></h3>
 										<h4 class="product-price">39.250.000 ₫<del class="product-old-price"></del></h4>
 										<div class="product-rating">
@@ -415,7 +417,9 @@
 										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+										<a href="../user/cart.html">
+											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+										</a>
 									</div>
 								</div>
 							</a>
@@ -436,7 +440,7 @@
 									</div>
 									<div class="product-body">
 										<p class="product-category">MacBook</p>
-										<h3 class="product-name"><a href="#">Máy xách tay/ Laptop MacBook Air MQD42LL/A</a></h3>
+										<h3 class="product-name"><a href="../detail/apple/mac_MQD42LL.html">Máy xách tay/ Laptop MacBook Air MQD42LL/A</a></h3>
 										<h4 class="product-price">27.700.000 ₫<del class="product-old-price"></del></h4>
 										<div class="product-rating">
 										</div>
@@ -446,7 +450,9 @@
 										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+										<a href="../user/cart.html">
+											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+										</a>
 									</div>
 								</div>
 							</a>
@@ -465,7 +471,7 @@
 								</div>
 								<div class="product-body">
 									<p class="product-category">MacBook</p>
-									<h3 class="product-name"><a href="#">
+									<h3 class="product-name"><a href="../detail/apple/mac_MQD32HN.html">
 									Máy xách tay/ Laptop MacBook Air MQD32HN/A</a></h3>
 									<h4 class="product-price">22.490.000 ₫<del class="product-old-price"></del></h4>
 									<div class="product-rating">
@@ -481,7 +487,9 @@
 									</div>
 								</div>
 								<div class="add-to-cart">
-									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+									<a href="../user/cart.html">
+										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+									</a>
 								</div>
 							</div>
 							
@@ -499,7 +507,7 @@
 								</div>
 								<div class="product-body">
 									<p class="product-category">MacBook</p>
-									<h3 class="product-name"><a href="#">Máy xách tay/ Laptop MacBook Air MQD42LL/A</a></h3>
+									<h3 class="product-name"><a href="../detail/apple/mac_MQD42LL.html">Máy xách tay/ Laptop MacBook Air MQD42LL/A</a></h3>
 									<h4 class="product-price">27.700.000 ₫<del class="product-old-price"></del></h4>
 									<div class="product-rating">
 									</div>
@@ -509,7 +517,9 @@
 									</div>
 								</div>
 								<div class="add-to-cart">
-									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+									<a href="../user/cart.html">
+										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+									</a>
 								</div>
 							</div>
 						</div>
@@ -523,7 +533,7 @@
 								</div>
 								<div class="product-body">
 									<p class="product-category">MacBook</p>
-									<h3 class="product-name"><a href="#">Máy xách tay/ Laptop MacBook Air MQD32ZP/A</a></h3>
+									<h3 class="product-name"><a href="../detail/apple/mac_MQD32ZP.html">Máy xách tay/ Laptop MacBook Air MQD32ZP/A</a></h3>
 									<h4 class="product-price">22.490.000 ₫<del class="product-old-price"></del></h4>
 									<div class="product-rating">
 									</div>
@@ -533,7 +543,9 @@
 									</div>
 								</div>
 								<div class="add-to-cart">
-									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+									<a href="../user/cart.html">
+										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+									</a>
 								</div>
 							</div>
 						</div>
@@ -551,7 +563,7 @@
 									</div>
 									<div class="product-body">
 										<p class="product-category">MacBook</p>
-										<h3 class="product-name"><a href="#">Máy xách tay/ Laptop MacBook 13.3" MPXV2ZP/A (Xám)</a></h3>
+										<h3 class="product-name"><a href="../detail/apple/mac_MPXV2ZP.html">Máy xách tay/ Laptop MacBook 13.3" MPXV2ZP/A (Xám)</a></h3>
 										<h4 class="product-price">45.990.000 ₫<del class="product-old-price"></del></h4>
 										<div class="product-rating">
 											<i class="fa fa-star"></i>
@@ -566,7 +578,9 @@
 										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+										<a href="../user/cart.html">
+											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+										</a>
 									</div>
 								</div>
 							</a>
@@ -585,7 +599,7 @@
 									</div>
 									<div class="product-body">
 										<p class="product-category">MacBook</p>
-										<h3 class="product-name"><a href="#">Máy xách tay/ Laptop MacBook 13.3" MPXU2LL/A (Bạc)</a></h3>
+										<h3 class="product-name"><a href="../detail/apple/mac_MPXU2LL.html">Máy xách tay/ Laptop MacBook 13.3" MPXU2LL/A (Bạc)</a></h3>
 										<h4 class="product-price">39.250.000 ₫<del class="product-old-price"></del></h4>
 										<div class="product-rating">
 											<i class="fa fa-star"></i>
@@ -600,7 +614,9 @@
 										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+										<a href="../user/cart.html">
+											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+										</a>
 									</div>
 								</div>
 							</a>
@@ -621,7 +637,7 @@
 									</div>
 									<div class="product-body">
 										<p class="product-category">MacBook</p>
-										<h3 class="product-name"><a href="#">Máy xách tay/ Laptop MacBook 15" MPTT2SA/A (Xám)</a></h3>
+										<h3 class="product-name"><a href="../detail/apple/mac_MPTT2SA.html">Máy xách tay/ Laptop MacBook 15" MPTT2SA/A (Xám)</a></h3>
 										<h4 class="product-price">71.500.000 ₫<del class="product-old-price"></del></h4>
 										<div class="product-rating">
 											<i class="fa fa-star"></i>
@@ -636,7 +652,9 @@
 										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+										<a href="../user/cart.html">
+											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+										</a>
 									</div>
 								</div>
 							</a>
