--- a/producer/Laptop_MSI.html
+++ b/producer/Laptop_MSI.html
@@ -288,7 +288,7 @@
 									</div>
 									<div class="product-body">
 										<p class="product-category">MSI</p>
-										<h3 class="product-name"><a href="#">Máy xách tay/ Laptop MSI GP62M 7REX-1884XVN (I7-7700HQ)</a></h3>
+										<h3 class="product-name"><a href="../detail/msi/msi_GP62M.html">Máy xách tay/ Laptop MSI GP62M 7REX-1884XVN (I7-7700HQ)</a></h3>
 										<h4 class="product-price">29.490.000 ₫<del class="product-old-price"></del></h4>
 									</div>
 								</a>
@@ -302,7 +302,7 @@
 									</div>
 									<div class="product-body">
 										<p class="product-category">MSI</p>
-										<h3 class="product-name"><a href="#">
+										<h3 class="product-name"><a href="../detail/msi/msi_GV62.html">
 										Máy xách tay/ Laptop MSI GV62 7RD-1883XVN (I5-7300HQ)</a></h3>
 										<h4 class="product-price">21.990.000 ₫<del class="product-old-price"></del></h4>
 									</div>
@@ -315,7 +315,7 @@
 								</div>
 								<div class="product-body">
 									<p class="product-category">MSI</p>
-									<h3 class="product-name"><a href="#">Máy xách tay/ Laptop MSI GS63 7RD- 093XVN (I7-7700HQ) (Đen)</a></h3>
+									<h3 class="product-name"><a href="../detail/msi/msi_GS63.html">Máy xách tay/ Laptop MSI GS63 7RD- 093XVN (I7-7700HQ) (Đen)</a></h3>
 									<h4 class="product-price">27.490.000 ₫<del class="product-old-price"></del></h4>
 								</div>
 							</div>
@@ -368,7 +368,7 @@
 										</div>
 										<div class="product-body">
 											<p class="product-category">MSI</p>
-											<h3 class="product-name"><a href="#">Máy xách tay/ Laptop MSI GP62M 7REX-1884XVN (I7-7700HQ)</a></h3>
+											<h3 class="product-name"><a href="../detail/msi/msi_GP62M.html">Máy xách tay/ Laptop MSI GP62M 7REX-1884XVN (I7-7700HQ)</a></h3>
 											<h4 class="product-price">29.490.000 ₫<del class="product-old-price"></del></h4>
 											<div class="product-rating">
 												<i class="fa fa-star"></i>
@@ -383,7 +383,9 @@
 											</div>
 										</div>
 										<div class="add-to-cart">
-											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											<a href="../user/cart.html">
+												<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											</a>
 										</div>
 									</div>
 								</a>
@@ -403,7 +405,7 @@
 										</div>
 										<div class="product-body">
 											<p class="product-category">MSI</p>
-											<h3 class="product-name"><a href="#">
+											<h3 class="product-name"><a href="../detail/msi/msi_GV62.html">
 											Máy xách tay/ Laptop MSI GV62 7RD-1883XVN (I5-7300HQ)</a></h3>
 											<h4 class="product-price">21.990.000 ₫<del class="product-old-price"></del></h4>
 											<div class="product-rating">
@@ -419,7 +421,9 @@
 											</div>
 										</div>
 										<div class="add-to-cart">
-											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											<a href="../user/cart.html">
+												<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											</a>
 										</div>
 									</div>
 								</a>
@@ -440,7 +444,7 @@
 										</div>
 										<div class="product-body">
 											<p class="product-category">MSI	</p>
-											<h3 class="product-name"><a href="#">Máy xách tay/ Laptop MSI GP62MVR 7RFX-893XVN (I7-7700HQ)</a></h3>
+											<h3 class="product-name"><a href="../detail/msi/msi_GP62MVR.html">Máy xách tay/ Laptop MSI GP62MVR 7RFX-893XVN (I7-7700HQ)</a></h3>
 											<h4 class="product-price">27.490.000 ₫<del class="product-old-price"></del></h4>
 											<div class="product-rating">
 											</div>
@@ -450,7 +454,9 @@
 											</div>
 										</div>
 										<div class="add-to-cart">
-											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											<a href="../user/cart.html">
+												<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											</a>
 										</div>
 									</div>
 									
@@ -469,7 +475,7 @@
 									</div>
 									<div class="product-body">
 										<p class="product-category">MSI</p>
-										<h3 class="product-name"><a href="#">Máy xách tay/ Laptop MSI GP62MVR 7RFX-893XVN (I7-7700HQ)</a></h3>
+										<h3 class="product-name"><a href="../detail/msi/msi_GP62MVR.html">Máy xách tay/ Laptop MSI GP62MVR 7RFX-893XVN (I7-7700HQ)</a></h3>
 										<h4 class="product-price">35.990.000 ₫<del class="product-old-price">19.990.000 ₫</del></h4>
 										<div class="product-rating">
 											<i class="fa fa-star"></i>
@@ -484,7 +490,9 @@
 										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+										<a href="../user/cart.html">
+											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+										</a>
 									</div>
 								</div>
 								
@@ -502,7 +510,7 @@
 									</div>
 									<div class="product-body">
 										<p class="product-category">MSI</p>
-										<h3 class="product-name"><a href="#">
+										<h3 class="product-name"><a href="../detail/msi/msi_GP62M-1497.html">
 										Máy xách tay/ Laptop MSI GP62M 7REX-1497XVN (I7-7700HQ)</a></h3>
 										<h4 class="product-price">28.990.000 ₫<del class="product-old-price"></del></h4>
 										<div class="product-rating">
@@ -513,7 +521,9 @@
 										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+										<a href="../user/cart.html">
+											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+										</a>
 									</div>
 								</div>
 							</div>
@@ -528,7 +538,7 @@
 									</div>
 									<div class="product-body">
 										<p class="product-category">MSI</p>
-										<h3 class="product-name"><a href="#">Máy xách tay/ Laptop MSI GV72 7RE-1424XVN (I7-7700HQ)</a></h3>
+										<h3 class="product-name"><a href="../detail/msi/msi_GV72.html">Máy xách tay/ Laptop MSI GV72 7RE-1424XVN (I7-7700HQ)</a></h3>
 										<h4 class="product-price">25.990.000 ₫<del class="product-old-price"></del></h4>
 										<div class="product-rating">
 										</div>
@@ -538,7 +548,9 @@
 										</div>
 									</div>
 									<div class="add-to-cart">
-										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+										<a href="../user/cart.html">
+											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+										</a>
 									</div>
 								</div>
 								</a>
@@ -557,7 +569,7 @@
 										</div>
 										<div class="product-body">
 											<p class="product-category">MSI</p>
-											<h3 class="product-name"><a href="#">Máy xách tay/ Laptop MSI GP72M 7REX-1216XVN (I7-7700HQ)</a></h3>
+											<h3 class="product-name"><a href="../detail/msi/msi_GP72M.html">Máy xách tay/ Laptop MSI GP72M 7REX-1216XVN (I7-7700HQ)</a></h3>
 											<h4 class="product-price">27.999.000 ₫<del class="product-old-price"></del></h4>
 											<div class="product-rating">
 												<i class="fa fa-star"></i>
@@ -572,7 +584,9 @@
 											</div>
 										</div>
 										<div class="add-to-cart">
-											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											<a href="../user/cart.html">
+												<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											</a>
 										</div>
 									</div>
 								</a>
@@ -591,7 +605,7 @@
 										</div>
 										<div class="product-body">
 											<p class="product-category">MSI</p>
-											<h3 class="product-name"><a href="#">Máy xách tay/ Laptop MSI GV72 7RD-874XVN (I7-7700HQ)</a></h3>
+											<h3 class="product-name"><a href="../detail/msi/msi_GV72-874XVN.html">Máy xách tay/ Laptop MSI GV72 7RD-874XVN (I7-7700HQ)</a></h3>
 											<h4 class="product-price">24.490.000 ₫<del class="product-old-price"></del></h4>
 											<div class="product-rating">
 												<i class="fa fa-star"></i>
@@ -606,7 +620,9 @@
 											</div>
 										</div>
 										<div class="add-to-cart">
-											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											<a href="../user/cart.html">
+												<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											</a>
 										</div>
 									</div>
 								</a>
@@ -627,7 +643,7 @@
 										</div>
 										<div class="product-body">
 											<p class="product-category">MSI</p>
-											<h3 class="product-name"><a href="#">Máy xách tay/ Laptop MSI GP62MVR 7RFX-892XVN (I7-7700HQ)</a></h3>
+											<h3 class="product-name"><a href="../detail/msi/msi_GP62MVR-892XVN.html">Máy xách tay/ Laptop MSI GP62MVR 7RFX-892XVN (I7-7700HQ)</a></h3>
 											<h4 class="product-price">32.490.000 ₫<del class="product-old-price"></del></h4>
 											<div class="product-rating">
 												<i class="fa fa-star"></i>
@@ -642,7 +658,9 @@
 											</div>
 										</div>
 										<div class="add-to-cart">
-											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											<a href="../user/cart.html">
+												<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+											</a>
 										</div>
 									</div>
 								</a>
