--- a/login/SignUp.html
+++ b/login/SignUp.html
@@ -192,7 +192,7 @@
 				    	<div class="g-recaptcha" data-sitekey="6LfPNVUUAAAAAGKNsEeXiuT2O_r_W73iMQ2Baw6p"></div>
 				    </form>
 				    
-				    <a href="#" class="primary-btn order-submit">Sign up</a>
+				    <a href="../AfterLog.html" class="primary-btn order-submit">Sign up</a>
 				  </div>
 				  
 				  <div class="rightsignup">
