--- a/login/SignIn.html
+++ b/login/SignIn.html
@@ -188,7 +188,7 @@
 				    <input type="text" name="email" placeholder="E-mail" />
 				    <input type="password" name="password" placeholder="Password" />
 				    
-				    <a href="#" class="primary-btn order-submit">Sign in</a>
+				    <a href="../AfterLog.html" class="primary-btn order-submit">Sign in</a>
 				  </div>
 				  
 				  <div class="rightsignup">
