--- a/producer/Laptop_MSI.html
+++ b/producer/Laptop_MSI.html
@@ -113,7 +113,7 @@
 									<span>Giỏ hàng</span>
 									<div class="qty">0</div>
 								</a>
-								<!-- <div class="cart-dropdown">
+								<div class="cart-dropdown">
 									<div class="cart-list">
 										<div class="product-widget">
 											<div class="product-img">
@@ -142,10 +142,10 @@
 										<h5>SUBTOTAL: $2940.00</h5>
 									</div>
 									<div class="cart-btns">
-										<a href="#">View Cart</a>
-										<a href="#">Checkout  <i class="fa fa-arrow-circle-right"></i></a>
+										<a href="../user/cart.html">Xem giỏ hàng</a>
+										<a href="#">Thanh toán<i class="fa fa-arrow-circle-right"></i></a>
 									</div>
-								</div> -->
+								</div>
 							</div>
 							<!-- /Cart -->
 
