--- a/AfterLog.html
+++ b/AfterLog.html
@@ -53,7 +53,7 @@
 							<a href="./user/updateinfo.html">Cập nhật thông tin cá nhân</a>
 							<a href="./user/cart.html">Giỏ hàng</a>
 							<a href="./user/pay.html">Thanh toán</a>
-							<a href="#">Lịch sử mua hàng</a>
+							<a href="./user/historypay.html">Lịch sử mua hàng</a>
 							<a href="./index.html">Đăng xuất</a>
 						</div>
 					</li>
