update thanh toán

--- a/user/pay.html
+++ b/user/pay.html
@@ -47,8 +47,15 @@
 				</ul>
 				<ul class="header-links pull-right">
 					<li><a href="#"><i class="fa fa-dollar"></i> VNĐ</a></li>
-					<li><a href="../login/SignIn.html" target="blank"><i class="far fa-user"></i>Đăng nhập</a></li>
-					<li><a href="../login/SignUp.html" target="blank"><i class="fas fa-plus"></i>Đăng ký</a></li>
+					<li class="dropdown" ><a href="#"><i class="fas fa-bars"></i>Tài khoản của tôi</a>
+						<div class="dropdown-account">
+							<a href="./user/updateinfo.html">Cập nhật thông tin cá nhân</a>
+							<a href="./user/cart.html">Giỏ hàng</a>
+							<a href="./user/pay.html">Thanh toán</a>
+							<a href="./user/historypay.html">Lịch sử mua hàng</a>
+							<a href="./index.html">Đăng xuất</a>
+						</div>
+					</li>
 				</ul>
 			</div>
 		</div>
@@ -231,58 +238,32 @@
 						</div>
 						<div class="order-summary">
 							<div class="order-col">
-								<div><strong>PRODUCT</strong></div>
-								<div><strong>TOTAL</strong></div>
+								<div><strong>SẢN PHẨM</strong></div>
+								<div><strong>TỔNG CỘNG</strong></div>
 							</div>
 							<div class="order-products">
 								<div class="order-col">
-									<div>1x Product Name Goes Here</div>
-									<div>$980.00</div>
+									<div>
+										<a href="../detail/dell/Dell 5437-D8MMY2.html" target="blank" class="at-in">
+											<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/70x/9df78eab33525d08d6e5fb8d27136e95/d/e/dell-5437-d8mmy2-1.png" class="img-responsive" alt="">Laptop DELL 5437-D8MMY2
+										</a>
+									</div>
+									<div>15.900.000 ₫</div>
 								</div>
 								<div class="order-col">
-									<div>2x Product Name Goes Here</div>
-									<div>$980.00</div>
+									<div>
+										<a href="../detail/asus/Asus GL503VM-GZ254T.html" target="blank" class="at-in"><img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/70x/9df78eab33525d08d6e5fb8d27136e95/l/g/lgzbbtn1g5s15_1.jpg" class="img-responsive" alt="">Laptop ASUS GL503VM-GZ254T (I7-7700HQ) (Đen)</a>
+									</div>
+									<div>39.990.000 ₫</div>
 								</div>
 							</div>
 							<div class="order-col">
-								<div>Shiping</div>
+								<div>Phí Ship</div>
 								<div><strong>FREE</strong></div>
 							</div>
 							<div class="order-col">
-								<div><strong>TOTAL</strong></div>
-								<div><strong class="order-total">$2940.00</strong></div>
-							</div>
-						</div>
-						<div class="payment-method">
-							<div class="input-radio">
-								<input type="radio" name="payment" id="payment-1">
-								<label for="payment-1">
-									<span></span>
-									Direct Bank Transfer
-								</label>
-								<div class="caption">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-								</div>
-							</div>
-							<div class="input-radio">
-								<input type="radio" name="payment" id="payment-2">
-								<label for="payment-2">
-									<span></span>
-									Cheque Payment
-								</label>
-								<div class="caption">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-								</div>
-							</div>
-							<div class="input-radio">
-								<input type="radio" name="payment" id="payment-3">
-								<label for="payment-3">
-									<span></span>
-									Paypal System
-								</label>
-								<div class="caption">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-								</div>
+								<div><strong>TỔNG CỘNG</strong></div>
+								<div><strong class="order-total">55.890.000 ₫</strong></div>
 							</div>
 						</div>
 						<div class="input-checkbox">
