--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 										<div class="product">
 											<a href="./detail/apple/mac_MPXU2LL.html">
 												<div class="product-img">
-													<img src="./moinhat-4.png"  alt="">
+													<img src="./img/banchay-2.jpg"  alt="">
 													<div class="product-label">
 														<span class="new">NEW</span>
 													</div>
