--- a/user/updateinfo.html
+++ b/user/updateinfo.html
@@ -47,8 +47,15 @@
 				</ul>
 				<ul class="header-links pull-right">
 					<li><a href="#"><i class="fa fa-dollar"></i> VNĐ</a></li>
-					<li><a href="../login/SignIn.html" target="blank"><i class="far fa-user"></i>Đăng nhập</a></li>
-					<li><a href="../login/SignUp.html" target="blank"><i class="fas fa-plus"></i>Đăng ký</a></li>
+					<li class="dropdown" ><a href="#"><i class="fas fa-bars"></i>Tài khoản của tôi</a>
+						<div class="dropdown-account">
+							<a href="./user/updateinfo.html">Cập nhật thông tin cá nhân</a>
+							<a href="./user/cart.html">Giỏ hàng</a>
+							<a href="./user/pay.html">Thanh toán</a>
+							<a href="./user/historypay.html">Lịch sử mua hàng</a>
+							<a href="./index.html">Đăng xuất</a>
+						</div>
+					</li>
 				</ul>
 			</div>
 		</div>
