--- a/detail/msi/msi_GV62.html
+++ b/detail/msi/msi_GV62.html
@@ -6,7 +6,7 @@
 		 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
 		<title>Laptop MSI GV62 7RD-1883XVN (I5-7300HQ)</title>
-
+		<link rel="icon" href="../../img/ico_logo.ico" type="image/x-icon">
  		<!-- Google font -->
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
 
@@ -77,7 +77,7 @@
 					<!-- LOGO -->
 					<div class="col-md-3">
 						<div class="header-logo">
-							<a href="#" class="logo">
+							<a href="../../index.html" class="logo">
 								<img width = "80%" src="../../img/logo.png" alt="">
 							</a>
 						</div>
