--- a/detail/msi/msi_GV72.html
+++ b/detail/msi/msi_GV72.html
@@ -6,7 +6,7 @@
 		 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
 		<title>Laptop MSI GV72 7RE-1424XVN (I7-7700HQ)</title>
-
+		<link rel="icon" href="../../img/ico_logo.ico" type="image/x-icon">
  		<!-- Google font -->
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
 
@@ -76,7 +76,7 @@
 					<!-- LOGO -->
 					<div class="col-md-3">
 						<div class="header-logo">
-							<a href="#" class="logo">
+							<a href="../../index.html" class="logo">
 								<img width = "80%" src="../../img/logo.png" alt="">
 							</a>
 						</div>
