--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 													</div>
 												</div>
 												<div class="add-to-cart">
-													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
 												</div>
 											</a>
 										</div>
@@ -335,7 +335,7 @@
 													</div>
 												</div>
 												<div class="add-to-cart">
-													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
 												</div>
 											</a>
 										</div>
@@ -369,7 +369,7 @@
 													</div>
 												</div>
 												<div class="add-to-cart">
-													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
 												</div>
 											</a>
 										</div>
@@ -400,7 +400,7 @@
 													</div>
 												</div>
 												<div class="add-to-cart">
-													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
 												</div>
 											</a>
 										</div>
@@ -431,7 +431,7 @@
 													</div>
 												</div>
 												<div class="add-to-cart">
-													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
 												</div>
 											</a>
 										</div>
@@ -465,7 +465,7 @@
 													</div>
 												</div>
 												<div class="add-to-cart">
-													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
 												</div>
 											</a>
 										</div>
@@ -499,7 +499,7 @@
 													</div>
 												</div>
 												<div class="add-to-cart">
-													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
 												</div>
 											</a>
 										</div>
@@ -528,7 +528,7 @@
 													</div>
 												</div>
 												<div class="add-to-cart">
-													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
 												</div>
 											</a>
 										</div>
@@ -559,7 +559,7 @@
 													</div>
 												</div>
 												<div class="add-to-cart">
-													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
 												</div>
 											</a>
 										</div>
@@ -590,7 +590,7 @@
 													</div>
 												</div>
 												<div class="add-to-cart">
-													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
 												</div>
 											</a>
 										</div>
@@ -669,7 +669,7 @@
 													</div>
 												</div>
 												<div class="add-to-cart">
-													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
 												</div>
 											</a>
 										</div>
@@ -703,7 +703,7 @@
 													</div>
 												</div>
 												<div class="add-to-cart">
-													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
 												</div>
 											</a>
 										</div>
@@ -737,7 +737,7 @@
 													</div>
 												</div>
 												<div class="add-to-cart">
-													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
 												</div>
 											</a>
 										</div>
@@ -771,7 +771,7 @@
 													</div>
 												</div>
 												<div class="add-to-cart">
-													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
 												</div>
 											</a>
 										</div>
@@ -805,7 +805,7 @@
 													</div>
 												</div>
 												<div class="add-to-cart">
-													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
 												</div>
 											</a>
 										</div>
@@ -839,7 +839,7 @@
 													</div>
 												</div>
 												<div class="add-to-cart">
-													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
 												</div>
 											</a>
 										</div>
@@ -873,7 +873,7 @@
 													</div>
 												</div>
 												<div class="add-to-cart">
-													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
 												</div>
 											</a>
 										</div>
@@ -902,7 +902,7 @@
 													</div>
 												</div>
 												<div class="add-to-cart">
-													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
 												</div>
 											</a>
 										</div>
@@ -936,7 +936,7 @@
 													</div>
 												</div>
 												<div class="add-to-cart">
-													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
 												</div>
 											</a>
 										</div>
@@ -970,7 +970,7 @@
 													</div>
 												</div>
 												<div class="add-to-cart">
-													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+													<button class="add-to-cart-btn"><i class="fa fa-shopping-cart" style="padding-top: 8px"></i> thêm vào giỏ</button>
 												</div>
 											</a>
 										</div>
